# tvpywidget

./: .coveragerc  .gitignore  LICENSE.txt  MANIFEST.in  README.md  codecov.yml  install.json  package.json  pyproject.toml  pytest.ini  tsconfig.json  tvpywidget.json  webpack.config.js
css/: widget.css
docs/: Makefile  environment.yml  make.bat
docs/source/: conf.py  develop-install.rst  index.rst  installing.rst
docs/source/_static/: embed-bundle.js.LICENSE.txt
examples/: Untitled.ipynb  introduction.ipynb
src/: extension.ts  index.ts  plotly-dist.d.ts  plugin.ts  types.d.ts  version.ts  widget.ts
tvpywidget/: __init__.py  _frontend.py  _version.py  example.py  gs_version.py  vpython.py  with_notebook.py
tvpywidget/nbextension/: extension.js
tvpywidget/tests/: conftest.py  test_example.py  test_nbextension_path.py
